--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -101,10 +101,10 @@
 }
 
 #videoMediaContainer .Camera {
-    max-width: 500px;
-    height: 285px;
-    min-height: 285px;
-    max-height: 285px;
+    max-width: 420px;
+    height: 238px;
+    min-height: 238px;
+    max-height: 238px;
     transition: border 0.5s ease-in-out;
     border-radius: 12px;
     overflow: hidden;
@@ -121,7 +121,7 @@
     top: 0;
     left: 0;
     border-radius: 12px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .speaks-now-view #videoMediaContainer > .Camera::after {
@@ -263,10 +263,15 @@
 
 video {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     object-fit: var(--videoObjFit);
     cursor: pointer;
     z-index: 1;
+}
+
+.vertical-orientation {
+    height: 100%;
+    width: auto;
 }
 
 video:fullscreen {
@@ -275,7 +280,7 @@ video:fullscreen {
 }
 
 .Camera video,
-.mirror {
+.video-box video {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     transform: rotateY(180deg);
@@ -326,16 +331,8 @@ input[type='range'] {
         gap: 0;
     }
 
-    @media (orientation: portrait) {
-        #videoMediaContainer {
-            flex-direction: column;
-        }
-    }
-
-    @media (orientation: landscape) {
-        #videoMediaContainer {
-            flex-direction: row;
-        }
+    #membersScreens video {
+        height: 100%;
     }
 
     .video-conteiner-box {
@@ -350,34 +347,56 @@ input[type='range'] {
         max-height: 100%;
         border-radius: 0;
         overflow: visible;
+        overflow: hidden;
         flex: 1 1;
+    }
+
+    #videoMediaContainer > .Camera {
+        border: 2px solid black;
+        border-width: 1px 2px;
     }
 
     #videoMediaContainer > .Camera::after {
         content: '';
         border: 0;
     }
-}
 
-@media (min-width: 769px) {
-    .video-conteiner-box.speaks-now-view {
-        overflow-y: hidden;
-        padding: 0px;
+    @media (orientation: portrait) {
+        #videoMediaContainer {
+            flex-direction: column;
+        }
     }
 
-    .video-conteiner-box.speaks-now-view video {
-        max-width: 1000px;
-    }
+    @media (orientation: landscape) {
+        #videoMediaContainer {
+            flex-direction: row;
+        }
 
-    .video-conteiner-box.speaks-now-view .Camera {
-        width: 100% !important;
-        max-width: none !important;
-        height: 100% !important;
-        min-height: 100% !important;
-        max-height: 100% !important;
-        border-radius: 0 !important;
-        position: absolute !important;
-        left: 0 !important;
-        top: 0 !important;
+        #videoMediaContainer > .Camera {
+            border-width: 4px 1px;
+        }
     }
 }
+
+/* @media (min-width: 769px) { */
+.video-conteiner-box.speaks-now-view {
+    overflow-y: hidden;
+    padding: 0px;
+}
+
+.video-conteiner-box.speaks-now-view video {
+    max-width: 1000px;
+}
+
+.video-conteiner-box.speaks-now-view .Camera {
+    width: 100% !important;
+    max-width: none !important;
+    height: 100% !important;
+    min-height: 100% !important;
+    max-height: 100% !important;
+    border-radius: 0 !important;
+    position: absolute !important;
+    left: 0 !important;
+    top: 0 !important;
+}
+/* } */
