--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -307,7 +307,7 @@
 
 video {
     width: 100%;
-    /* height: 100%; */
+    height: auto;
     object-fit: var(--videoObjFit);
     cursor: pointer;
     z-index: 1;
