mobile height fix

--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -46,7 +46,7 @@ html[data-theme='dark'] {
     --border-radius: 1rem;
     --msger-top: 50%;
     --msger-left: 50%;
-    --msger-height: calc(100vh - (88px + 126px));
+    --msger-height: calc(100svh - (88px + 126px));
     --msger-width: 396px;
     --msger-bubble-width: 90%;
     --msger-bg: radial-gradient(#393939, #000000);
@@ -139,7 +139,7 @@ a {
 
 #globalLoader {
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     z-index: 3;
     position: fixed;
     top: 0;
@@ -502,7 +502,7 @@ a {
     flex-direction: column;
     gap: 3px;
     transition: height 0.3s ease-in-out;
-    max-height: 95vh;
+    max-height: 95svh;
     overflow-y: auto;
 }
 
@@ -712,7 +712,7 @@ a {
     flex-direction: column;
     gap: 12px;
     overflow-y: auto;
-    max-height: 95vh;
+    max-height: 95svh;
     z-index: 99;
 }
 
@@ -996,7 +996,7 @@ input:checked + .slider:before {
         width: 100%;
         left: 0;
         top: -100%;
-        height: 100vh;
+        height: 100svh;
         max-height: -webkit-fill-available;
         padding: 16px;
         padding-left: 24px;
@@ -2005,7 +2005,7 @@ span.highlight {
     }
 
     .chat-msger {
-        max-height: calc(100vh - 142px);
+        max-height: calc(100svh - 142px);
         height: 100%;
         padding: 0;
         /* justify-content: flex-end;
@@ -2055,7 +2055,7 @@ span.highlight {
     }
 
     #chatRoom {
-        height: 100vh;
+        height: 100svh;
         z-index: 9;
     }
 
