--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1757,7 +1757,7 @@ label {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100svh;
 }
 .boxed-container {
     max-width: 1440px;
