--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -2016,6 +2016,7 @@ span.highlight {
     }
 
     .chat-content {
+        padding-bottom: 16px;
         height: 100%;
         display: flex;
         justify-content: space-between;
