--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -371,6 +371,8 @@ input[type='range'] {
     #videoMediaContainer {
         top: 0;
         height: 100svh;
+        max-height: 100svh;
+        max-height: -webkit-fill-available;
         margin: 0;
         gap: 0;
     }
