--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -212,7 +212,7 @@
             </div>
         </div>
 
-        <div id="snackbar" class="hidden">
+        <div id="snackbar">
             <span></span>
         </div>
 
