--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -216,6 +216,15 @@
             <span></span>
         </div>
 
+        <div id="timeEnd">
+            <div class="time-end-text">
+                <img src="../images/icons/time_icon.svg" alt="" /><span
+                    >Your time ends in <span id="timeEndTimer">10:00</span> minutes</span
+                >
+            </div>
+            <button onclick="rc.resetCountdownTimer()">Extend by one hour</button>
+        </div>
+
         <header class="header">
             <img class="header-logo" src="../images/featlyLogo.svg" alt="logo" />
             <nav id="headerNav" class="header-nav">
