--- a/public/views/404.html
+++ b/public/views/404.html
@@ -7,7 +7,7 @@
             async
             defer
             data-website-id="28098c62-a100-44a1-8f03-234b3f0a8194"
-            src="https://talk.featly.io/umami.js"
+            src="https://featly.io/umami.js"
         ></script>
 
         <!-- Title and Icon -->
