--- a/public/views/newroom.html
+++ b/public/views/newroom.html
@@ -44,7 +44,7 @@
             property="og:description"
             content="FeatlyTalk SFU calling provides real-time video calls, messaging and screen sharing."
         />
-        <meta property="og:image" content="https://talk.featly.io/images/featlytalksfu.png" />
+        <meta property="og:image" content="https://featly.io/images/featlytalksfu.png" />
 
         <!-- StyleSheet -->
 
