--- a/public/views/permission.html
+++ b/public/views/permission.html
@@ -32,7 +32,7 @@
             property="og:description"
             content="FeatlyTalk SFU calling provides real-time HD quality and latency simply not available with traditional technology."
         />
-        <meta property="og:image" content="https://talk.featly.io/images/featlytalksfu.png" />
+        <meta property="og:image" content="https://featly.io/images/featlytalksfu.png" />
 
         <!-- StyleSheet -->
 
