--- a/public/views/50x.html
+++ b/public/views/50x.html
@@ -34,7 +34,7 @@
             property="og:description"
             content="Featly Talk SFU calling provides real-time HD quality and latency simply not available with traditional technology."
         />
-        <meta property="og:image" content="https://talk.featly.io/images/featlytalksfu.png" />
+        <meta property="og:image" content="https://featly.io/images/featlytalksfu.png" />
 
         <!-- StyleSheet -->
 
