--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -47,7 +47,7 @@
             property="og:description"
             content="FeatlyTalk  calling provides real-time video calls, messaging and screen sharing."
         />
-        <meta property="og:image" content="https://talk.featly.io/images/featlytalk.png" />
+        <meta property="og:image" content="https://featly.io/images/featlytalk.png" />
 
         <!-- StyleSheet -->
 
