--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -262,6 +262,12 @@
             </div>
         </div>
 
+        <div id="picturePreview" class="hidden">
+            <button id="closePicturePreview">
+                <img class="close-icon" src="../images/icons/close_icon.svg" alt="close" />
+            </button>
+        </div>
+
         <div id="control" class="hidden">
             <div class="button-box control-voice-button">
                 <button id="startAudioButton" class="hidden"><i class="fas fa-microphone-slash"></i></button>
