--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -2613,6 +2613,10 @@ button:hover {
     overflow: hidden;
 }
 
+#receiveFileDiv {
+    display: none !important;
+}
+
 #sendAbortBtn,
 #receiveHideBtn {
     padding: 5px;
@@ -2636,6 +2640,35 @@ progress {
 #imgShareSend:hover,
 #imgShareReceive:hover {
     cursor: move;
+}
+
+#picturePreview {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: #000000c9;
+    max-height: -webkit-fill-available;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+#closePicturePreview {
+    position: fixed;
+    right: 29px;
+    top: 25px;
+}
+
+#picturePreview > img {
+    max-width: 100%;
+    max-height: 70vh;
+}
+
+.fa-solid.fa-file > span {
+    padding-left: 5px;
 }
 
 /*--------------------------------------------------------------
