--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -75,7 +75,10 @@
                                 click without registration.
                             </h1>
                             <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make Feat</button>
-                             <button id="joinRoomBtn2" class="button-make-feat" onclick="joinRoom()">Join Rooms From Other Users!</button>
+                             <a href="joinurspheres.html">
+  <button>Join rooms others create</button>
+</a>
+
                             <script>
                                 function generateUUID() {
                                     // Generate random UUID v4
