--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -75,7 +75,7 @@
                                 click without registration.
                             </h1>
                             <button id="joinRoomButton" class="button-make-feat" onclick="joinRoom()">Make Feat</button>
-                             <a href="joinurspheres.html">Join Rooms others create</a>
+                             <a href="/views/joinurspheres.html">Join Rooms</a>
 
                             <script>
                                 function generateUUID() {
