--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -11,7 +11,7 @@
 
   <script>
     // Fetch room data from server
-    fetch('https://chatspheres.com/joinurspheres')
+     fetch('https://chatspheres.com/api/rooms')
       .then(response => response.json())
       .then(data => {
         // Get room list DOM element
