--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -133,6 +133,11 @@
                     <input id="initInputName" required type="text" name="name" class="init-common" />
                     <label>Your name</label>
                 </div>
+<div class="input-box"> <!-- Add this div for the description input -->
+        <input id="initInputDescription" required type="text" name="description" class="init-common" />
+        <label>Description of the meeting</label>
+    </div>
+                
 
                 <button id="initSubmitButton" type="submit" class="init-common">Create Feat</button>
             </form>
